[metadata]
name = colcon-argcomplete
version = attr: colcon_argcomplete.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-argcomplete/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Completion for colcon command lines using argcomplete.
keywords = colcon

[options]
install_requires =
  argcomplete
  colcon-core
  colcon-metadata
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = false

[options.entry_points]
colcon_core.argument_parser =
    argcomplete = colcon_argcomplete.argument_parser.argcomplete:ArgcompleteArgumentParserDecorator
colcon_core.extension_point =
    colcon_argcomplete.argcomplete_completer = colcon_argcomplete.argcomplete_completer:ArgcompleteCompleterExtensionPoint
