[metadata]
name = colcon-argcomplete
version = attr: colcon_argcomplete.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-argcomplete/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-argcomplete/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Completion for colcon command lines using argcomplete.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  argcomplete
  colcon-core
packages = find:
zip_safe = false

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.data_files]
# distutils replaces dashes in keys with underscores
share/colcon_argcomplete/hook =
    completion/colcon-argcomplete.bash
    completion/colcon-argcomplete.zsh

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
junit_suite_name = colcon-argcomplete

[options.entry_points]
colcon_core.argument_parser =
    argcomplete = colcon_argcomplete.argument_parser.argcomplete:ArgcompleteArgumentParserDecorator
colcon_core.environment_variable =
    argcomplete_timing = colcon_argcomplete.argument_parser.argcomplete:COMPLETION_LOGFILE_ENVIRONMENT_VARIABLE
colcon_core.extension_point =
    colcon_argcomplete.argcomplete_completer = colcon_argcomplete.argcomplete_completer:ArgcompleteCompleterExtensionPoint

[flake8]
import-order-style = google

[coverage:run]
source = colcon_argcomplete
